# SyntheticLidarScanner

./: CMakeLists.txt  CMakeLists.txt.old  FAQ.txt  Helpers.cpp  Helpers.h  LidarScannerDemo.cpp  LidarScannerNonInteractive.cpp  README.txt  RepresentationVisualization.cxx  ScannerInteractorStyle.cxx  ScannerInteractorStyle.h  SyntheticLidarScanner.cpp  SyntheticLidarScannerWidget.cpp  SyntheticLidarScannerWidget.h  SyntheticLidarScannerWidget.ui  form.cpp  form.h  form.ui  vtkLidarPoint.cxx  vtkLidarPoint.h  vtkLidarScanner.cxx  vtkLidarScanner.h  vtkLidarScannerDemo.cxx  vtkLidarScannerExample.cxx  vtkPTXWriter.cxx  vtkPTXWriter.h  vtkRay.cxx  vtkRay.h
data/: sphere.vtp
